# types/s3.ts
@@ -1,0 +1,9 @@
+
+export interface BucketObject {
+    name: string,
+    url: string,
+    size: number,
+    lastModified?: Date,
+    isFolder: boolean,
+    children?: BucketObject[]
+}
